--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bulma": "^1.0.3",
-    "foundation-sites": "^6.9.0"
+    "foundation-sites": "^6.9.0",
+    "materialize-css": "^1.0.0-rc.2"
   }
 }
